--- a/machine_learning/regression_data_science/bangalorehomeprices.ipynb
+++ b/machine_learning/regression_data_science/bangalorehomeprices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "94c2dc27",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: <object object at 0x7fc7ca4b33d0>\n"
+      "Using matplotlib backend: <object object at 0x7fc2ea2f4be0>\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5b0e5ff0",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "4      NaN       1200   2.0      1.0   51.00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4b3681f5",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "(13320, 9)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "edc86e08",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c0050916",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "       '12 Bedroom', '13 BHK', '18 Bedroom'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "79a6c6e6",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_68389/3999863029.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_19493/3999863029.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -496,7 +496,7 @@
        "4                  Kothanur      2 BHK       1200   2.0   51.00    2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2e9c7907",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "       13, 18])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "47d951d1",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "4684                Munnekollal  43 Bedroom       2400  40.0  660.0   43"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c26a50db",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "9a4c5e83",
    "metadata": {},
    "outputs": [],
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "2d20d580",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "672        Bettahalsoor  4 Bedroom     3090 - 5002   4.0  445.000    4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "d50c9e76",
    "metadata": {},
    "outputs": [],
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "56cb0cb5",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "4                  Kothanur      2 BHK      1200.0   2.0   51.00    2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,11 +919,506 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "265f3f60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location      Yelahanka\n",
+       "size              4 BHK\n",
+       "total_sqft       2475.0\n",
+       "bath                4.0\n",
+       "price             186.0\n",
+       "bhk                   4\n",
+       "Name: 30, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.loc[30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4936c02c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "      <th>price_per_sqft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3699.810606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4615.384615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4305.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6245.890861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4250.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size  total_sqft  bath   price  bhk  \\\n",
+       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07    2   \n",
+       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00    4   \n",
+       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00    3   \n",
+       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00    3   \n",
+       "4                  Kothanur      2 BHK      1200.0   2.0   51.00    2   \n",
+       "\n",
+       "   price_per_sqft  \n",
+       "0     3699.810606  \n",
+       "1     4615.384615  \n",
+       "2     4305.555556  \n",
+       "3     6245.890861  \n",
+       "4     4250.000000  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5 = df4.copy()\n",
+    "# price per square feet = (price*100000)/total_sqft | multiply by 100000 to convert price from lakhs to rupees\n",
+    "df5['price_per_sqft'] = df5['price']*100000 / df5['total_sqft']\n",
+    "df5.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9eed3131",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Electronic City Phase II', 'Chikka Tirupathi', 'Uttarahalli', ...,\n",
+       "       '12th cross srinivas nagar banshankari 3rd stage',\n",
+       "       'Havanur extension', 'Abshot Layout'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# looking at location feature, is a categorical feature\n",
+    "df5.location.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6abeb26d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1304"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df5.location.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fc14f1be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "Whitefield               535\n",
+       "Sarjapur  Road           392\n",
+       "Electronic City          304\n",
+       "Kanakpura Road           266\n",
+       "Thanisandra              236\n",
+       "                        ... \n",
+       "1 Giri Nagar               1\n",
+       "Kanakapura Road,           1\n",
+       "Kanakapura main  Road      1\n",
+       "Karnataka Shabarimala      1\n",
+       "whitefiled                 1\n",
+       "Name: location, Length: 1293, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# figure out how many location have a few data points\n",
+    "df5.location = df5.location.apply(lambda x: x.strip()) # strip whitespace\n",
+    "location_stats = df5.groupby('location')['location'].agg('count').sort_values(ascending=False)\n",
+    "location_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "92b289ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1052"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check how many locations have less than 10 data points\n",
+    "len(location_stats[location_stats<=10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dd2e0f00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "Basapura                 10\n",
+       "1st Block Koramangala    10\n",
+       "Gunjur Palya             10\n",
+       "Kalkere                  10\n",
+       "Sector 1 HSR Layout      10\n",
+       "                         ..\n",
+       "1 Giri Nagar              1\n",
+       "Kanakapura Road,          1\n",
+       "Kanakapura main  Road     1\n",
+       "Karnataka Shabarimala     1\n",
+       "whitefiled                1\n",
+       "Name: location, Length: 1052, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# renaming locations with less than 10 data points to 'other'\n",
+    "location_stats_less_than_10 = location_stats[location_stats<=10]\n",
+    "location_stats_less_than_10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8c05271c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1293"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df5.location.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8808a8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.location = df5.location.apply(lambda x: 'other' if x in location_stats_less_than_10 else x)\n",
+    "len(df5.location.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "185e2200",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "      <th>price_per_sqft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3699.810606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4615.384615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4305.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6245.890861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4250.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Whitefield</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1170.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>38.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3247.863248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Old Airport Road</td>\n",
+       "      <td>4 BHK</td>\n",
+       "      <td>2732.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>204.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7467.057101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Rajaji Nagar</td>\n",
+       "      <td>4 BHK</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18181.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Marathahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1310.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>63.25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4828.244275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>other</td>\n",
+       "      <td>6 Bedroom</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>370.00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>36274.509804</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size  total_sqft  bath   price  bhk  \\\n",
+       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07    2   \n",
+       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00    4   \n",
+       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00    3   \n",
+       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00    3   \n",
+       "4                  Kothanur      2 BHK      1200.0   2.0   51.00    2   \n",
+       "5                Whitefield      2 BHK      1170.0   2.0   38.00    2   \n",
+       "6          Old Airport Road      4 BHK      2732.0   4.0  204.00    4   \n",
+       "7              Rajaji Nagar      4 BHK      3300.0   4.0  600.00    4   \n",
+       "8              Marathahalli      3 BHK      1310.0   3.0   63.25    3   \n",
+       "9                     other  6 Bedroom      1020.0   6.0  370.00    6   \n",
+       "\n",
+       "   price_per_sqft  \n",
+       "0     3699.810606  \n",
+       "1     4615.384615  \n",
+       "2     4305.555556  \n",
+       "3     6245.890861  \n",
+       "4     4250.000000  \n",
+       "5     3247.863248  \n",
+       "6     7467.057101  \n",
+       "7    18181.818182  \n",
+       "8     4828.244275  \n",
+       "9    36274.509804  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.head(10)"
+   ]
   }
  ],
  "metadata": {
