--- a/machine_learning/regression_data_science/bangalorehomeprices.ipynb
+++ b/machine_learning/regression_data_science/bangalorehomeprices.ipynb
@@ -1419,6 +1419,235 @@
    "source": [
     "df5.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3981a0fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "      <th>price_per_sqft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>other</td>\n",
+       "      <td>6 Bedroom</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>370.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>36274.509804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>HSR Layout</td>\n",
+       "      <td>8 Bedroom</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>33333.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Murugeshpalya</td>\n",
+       "      <td>6 Bedroom</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10660.980810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Devarachikkanahalli</td>\n",
+       "      <td>8 Bedroom</td>\n",
+       "      <td>1350.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6296.296296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>other</td>\n",
+       "      <td>3 Bedroom</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               location       size  total_sqft  bath  price  bhk  \\\n",
+       "9                 other  6 Bedroom      1020.0   6.0  370.0    6   \n",
+       "45           HSR Layout  8 Bedroom       600.0   9.0  200.0    8   \n",
+       "58        Murugeshpalya  6 Bedroom      1407.0   4.0  150.0    6   \n",
+       "68  Devarachikkanahalli  8 Bedroom      1350.0   7.0   85.0    8   \n",
+       "70                other  3 Bedroom       500.0   3.0  100.0    3   \n",
+       "\n",
+       "    price_per_sqft  \n",
+       "9     36274.509804  \n",
+       "45    33333.333333  \n",
+       "58    10660.980810  \n",
+       "68     6296.296296  \n",
+       "70    20000.000000  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Outlier removal checking for total_sqft per bhk\n",
+    "df5[df5.total_sqft/df5.bhk<300].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7ba643a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13246, 7)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "affd1092",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12502, 7)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6 = df5[~(df5.total_sqft/df5.bhk<300)] # ~ negation operator\n",
+    "df6.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bce6631e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     12456.000000\n",
+       "mean       6308.502826\n",
+       "std        4168.127339\n",
+       "min         267.829813\n",
+       "25%        4210.526316\n",
+       "50%        5294.117647\n",
+       "75%        6916.666667\n",
+       "max      176470.588235\n",
+       "Name: price_per_sqft, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6.price_per_sqft.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "00679224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use standard deviation to remove outliers\n",
+    "def remove_pps_outliers(df):\n",
+    "    df_out = pd.DataFrame()\n",
+    "    for key, subdf in df.groupby('location'):\n",
+    "        m = np.mean(subdf.price_per_sqft)\n",
+    "        st = np.std(subdf.price_per_sqft)\n",
+    "        reduced_df = subdf[(subdf.price_per_sqft>(m-st)) & (subdf.price_per_sqft<=(m+st))]\n",
+    "        df_out = pd.concat([df_out, reduced_df], ignore_index=True)\n",
+    "    return df_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2d52a6b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10241, 7)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df7 = remove_pps_outliers(df6)\n",
+    "df7.shape"
+   ]
   }
  ],
  "metadata": {
