--- a/machine_learning/regression_data_science/bangalorehomeprices.ipynb
+++ b/machine_learning/regression_data_science/bangalorehomeprices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "94c2dc27",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: <object object at 0x7fc2ea2f4be0>\n"
+      "Using matplotlib backend: MacOSX\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "5b0e5ff0",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "4      NaN       1200   2.0      1.0   51.00  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "4b3681f5",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "(13320, 9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "edc86e08",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "Name: area_type, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "096ba351",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "4                  Kothanur      2 BHK       1200   2.0   51.00"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "8e7dcb90",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "0e1e6270",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "c0050916",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "       '12 Bedroom', '13 BHK', '18 Bedroom'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "79a6c6e6",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_19493/3999863029.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_45696/3999863029.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -496,7 +496,7 @@
        "4                  Kothanur      2 BHK       1200   2.0   51.00    2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "2e9c7907",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "       13, 18])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "47d951d1",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "4684                Munnekollal  43 Bedroom       2400  40.0  660.0   43"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "c26a50db",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "9a4c5e83",
    "metadata": {},
    "outputs": [],
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "2d20d580",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "672        Bettahalsoor  4 Bedroom     3090 - 5002   4.0  445.000    4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "d50c9e76",
    "metadata": {},
    "outputs": [],
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "56cb0cb5",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "4                  Kothanur      2 BHK      1200.0   2.0   51.00    2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "265f3f60",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
        "Name: 30, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "4936c02c",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
        "4     4250.000000  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "9eed3131",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
        "       'Havanur extension', 'Abshot Layout'], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "id": "6abeb26d",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
        "1304"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "id": "fc14f1be",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1132,7 @@
        "Name: location, Length: 1293, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "id": "92b289ba",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1156,7 @@
        "1052"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "id": "dd2e0f00",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1190,7 @@
        "Name: location, Length: 1052, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "8c05271c",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1213,7 @@
        "1293"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "id": "8808a8ba",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
        "242"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "id": "185e2200",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1411,7 @@
        "9    36274.509804  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "id": "3981a0fb",
    "metadata": {},
    "outputs": [
@@ -1527,7 +1527,7 @@
        "70    20000.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "7ba643a7",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1549,7 @@
        "(13246, 7)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "affd1092",
    "metadata": {},
    "outputs": [
@@ -1570,7 +1570,7 @@
        "(12502, 7)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "id": "bce6631e",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1600,7 @@
        "Name: price_per_sqft, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "id": "00679224",
    "metadata": {},
    "outputs": [],
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "id": "2d52a6b5",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1639,7 @@
        "(10241, 7)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,6 +1647,28 @@
    "source": [
     "df7 = remove_pps_outliers(df6)\n",
     "df7.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f008bf44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_scatter_chart(df, location):\n",
+    "    bhk2 = df[(df.location==location) & (df.bhk==2)]\n",
+    "    bhk3 = df[(df.location==location) & (df.bhk==3)]\n",
+    "    matplotlib.rcParams['figure.figsize'] = (15, 10)\n",
+    "    plt.scatter(bhk2.total_sqft, bhk2.price_per_sqft, color='blue', label='2 BHK', s=50)\n",
+    "    plt.scatter(bhk3.total_sqft, bhk3.price_per_sqft, marker='+', color='green', label='3 BHK', s=50)\n",
+    "    plt.xlabel(\"Total Square Feet Area\")\n",
+    "    plt.ylabel(\"Price Per Square Feet (Lakh Indian Rupees)\")\n",
+    "    plt.title(location)\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "plot_scatter_chart(df7, \"Rajaji Nagar\")"
    ]
   }
  ],
